// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Component opens dropdown when label is clicked 1`] = `
<div>
  <div
    class="sc-eDHQDy dmqwme"
  >
    <div
      class="sc-iqyJx joJSDy"
    >
      <span>
         
        Select a language
         
      </span>
      <svg
        fill="none"
        height="24"
        viewBox="0 0 15 15"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13.7642 10.4092L7.61416 4.25918C7.56927 4.21135 7.51505 4.17323 7.45486 4.14717C7.39466 4.12111 7.32976 4.10766 7.26416 4.10766C7.19856 4.10766 7.13366 4.12111 7.07347 4.14717C7.01327 4.17323 6.95905 4.21135 6.91416 4.25918L0.76416 10.4092"
          stroke="#F6F6F6"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </div>
    <div
      class="sc-giBObj ffWJNU"
    >
      <div
        class="sc-blHHSb gbrKqH"
      >
         
        English
         
      </div>
      <div
        class="sc-blHHSb gbrKqH"
      >
         
        Italian
         
      </div>
      <div
        class="sc-blHHSb gbrKqH"
      >
         
        Spanish
         
      </div>
      <div
        class="sc-blHHSb gbrKqH"
      >
         
        French
         
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Component renders correctly with a selected item 1`] = `
<div>
  <div
    class="sc-eDHQDy dmqwme"
  >
    <div
      class="sc-iqyJx joJSDy"
    >
      <span>
         
        English
         
      </span>
      <svg
        fill="none"
        height="24"
        viewBox="0 0 15 15"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0.76416 4.10742L6.91416 10.2574C6.95905 10.3053 7.01327 10.3434 7.07347 10.3694C7.13366 10.3955 7.19856 10.4089 7.26416 10.4089C7.32976 10.4089 7.39466 10.3955 7.45485 10.3694C7.51505 10.3434 7.56927 10.3053 7.61416 10.2574L13.7642 4.10742"
          stroke="#F6F6F6"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select Component renders correctly with placeholder when no selected item 1`] = `
<div>
  <div
    class="sc-eDHQDy dmqwme"
  >
    <div
      class="sc-iqyJx joJSDy"
    >
      <span>
         
        Select a language
         
      </span>
      <svg
        fill="none"
        height="24"
        viewBox="0 0 15 15"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0.76416 4.10742L6.91416 10.2574C6.95905 10.3053 7.01327 10.3434 7.07347 10.3694C7.13366 10.3955 7.19856 10.4089 7.26416 10.4089C7.32976 10.4089 7.39466 10.3955 7.45485 10.3694C7.51505 10.3434 7.56927 10.3053 7.61416 10.2574L13.7642 4.10742"
          stroke="#F6F6F6"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </div>
  </div>
</div>
`;
